--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
                           <img src="img/index/logo.svg" alt="">
                      </div>
                      <ul class="main-menu">
-                          <li><a href="#">Каталог</a>
+                          <li><a href="#" class="not-hover">Каталог</a>
                                   <ul class="catalog-menu">
-                                      <li><a href="#" class="catalog-menu-new">Новинки</a></li>
-                                      <li><a href="catalog.html">Сливочное</a></li>
-                                      <li><a href="#">Щербеты</a></li>
-                                      <li><a href="#">Фруктовый лед</a></li>
-                                      <li><a href="#">Мелорин</a></li>
+                                      <li><a href="#" class="catalog-menu-new not-hover">Новинки</a></li>
+                                      <li><a href="catalog.html" class="not-hover">Сливочное</a></li>
+                                      <li><a href="#" class="not-hover">Щербеты</a></li>
+                                      <li><a href="#" class="not-hover">Фруктовый лед</a></li>
+                                      <li><a href="#" class="not-hover">Мелорин</a></li>
                                   </ul>
                           </li>
-                          <li><a href="#">Доставка и оплата</a></li>
-                          <li><a href="#">О Компании</a></li>
+                          <li><a href="#" class="not-hover">Доставка и оплата</a></li>
+                          <li><a href="#" class="not-hover">О Компании</a></li>
                       </ul>
                   </nav>
                   <div class="user-block">
@@ -41,7 +41,7 @@
                           </div>
                       </div>
                       <div class="user">
-                          <a href="#" class="login-icon">Вход</a>
+                          <a href="#" class="login-icon not-hover">Вход</a>
                           <div class="user-hover">
                               <form action="#" method="post">
                                   <input type="email" name="email" placeholder="Электронная почта">
@@ -53,7 +53,7 @@
                           </div>
                       </div>
                       <div class="basket">
-                          <a href="#" class="basket-icon">Пусто</a>
+                          <a href="#" class="basket-icon not-hover">Пусто</a>
                       </div>
                   </div>
               </div>    
@@ -66,18 +66,18 @@
                   <div class="slider">
                       <div class="slide" id="slide1">
                           <h1 class="slide-title"> Крем-брюле и пломбир 
-                           с малиновым джемом</h1>
-                          <a href="#" class="slider-button">Давайте оба!</a>
+                           с&nbspмалиновым джемом</h1>
+                          <a href="#" class="slider-button not-hover">Давайте оба!</a>
                       </div>
                       <div class="slide" id="slide2">
                           <h1 class="slide-title">Шоколадный пломбир
-                           и лимонный сорбет </h1>
-                          <a href="#" class="slider-button">Давайте оба!</a>
+                           и&nbspлимонный сорбет </h1>
+                          <a href="#" class="slider-button not-hover">Давайте оба!</a>
                       </div>
                       <div class="slide" id="slide3">
                           <h1 class="slide-title"> Пломбир с помадкой
-                            и клубничный щербет</h1>
-                          <a href="#" class="slider-button">Давайте оба!</a>
+                            и&nbspклубничный щербет</h1>
+                          <a href="#" class="slider-button not-hover">Давайте оба!</a>
                       </div>
                       <div class="slider-controls">
                           <label for="btn-1"></label>
@@ -88,7 +88,7 @@
                   <div class="stocks">
                       <section class="stock stock-left clearfix">
                           <h2>Малинка даром!</h2>
-                          <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно</p>
+                          <p>При покупке 2 кг любого фруктового мороженого, добавим в&nbspваш заказ банку малинового варенья бесплатно</p>
                           <a href="#" class="button">Хочу варенье!</a>
                       </section>
                       <section class="stock stock-right">
@@ -102,7 +102,7 @@
                          <div class="item-active">
                               <div class="item-top">
                                   <img src="img/index/1.png" alt="Изображение товара">
-                                  <span class="price">310<img src="img/index/rub.svg" alt="Р"><span class="mass">/кг</span></span>
+                                  <span class="price">310<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp/кг</span></span>
                               </div>
                               <a href="#" class="goods-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
                               <a href="#" class="button">Быстрый просмотр</a>
@@ -112,7 +112,7 @@
                           <div class="item-active">
                               <div class="item-top">
                                   <img src="img/index/2.png" alt="Изображение товара">
-                                  <span class="price">380<img src="img/index/rub.svg" alt="Р"><span class="mass">/кг</span></span>
+                                  <span class="price">380<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp/кг</span></span>
                               </div>
                               <a href="#" class="goods-title">Сливочно-кофейное с кусочками шоколада</a>
                               <a href="#" class="button">Быстрый просмотр</a>
@@ -122,7 +122,7 @@
                           <div class="item-active">
                              <div class="item-top">
                                   <img src="img/index/3.png" alt="Изображение товара">
-                                  <span class="price">355<img src="img/index/rub.svg" alt="Р"><span class="mass">/кг</span></span>
+                                  <span class="price">355<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp/кг</span></span>
                               </div>
                               <a href="#" class="goods-title">Сливочно-клубничное с присыпкой из белого шоколада</a>
                               <a href="#" class="button">Быстрый просмотр</a>
@@ -132,7 +132,7 @@
                           <div class="item-active">
                              <div class="item-top">
                                   <img src="img/index/4.png" alt="Изображение товара">
-                                  <span class="price">415<img src="img/index/rub.svg" alt="Р"><span class="mass">/кг</span></span>
+                                  <span class="price">415<img src="img/index/rub.svg" alt="Р"><span class="mass">&nbsp/кг</span></span>
                               </div>
                               <a href="#" class="goods-title">Сливочное крем-брюле с карамельной подливкой</a>
                               <a href="#" class="button">Быстрый просмотр</a>
@@ -161,9 +161,9 @@
                   <div class="news">
                       <div class="news-block news-left">
                           <span class="name">Новое в нашем блоге</span>
-                          <a href="#" class="news-title">10 способов сервировки фруктовых щербетов к столу</a>
+                          <a href="#" class="news-title">10 способов сервировки фруктовых щербетов к&nbspстолу</a>
                       </div>
-                      <div class="news-block news-right">
+                      <div class="news-block news-right clearfix">
                           <p class="sub-text">Подпишись на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)</p>
                           <form action="#" method="post">
                               <input type="email" placeholder="Электронная почта" id="email">
@@ -197,12 +197,12 @@
                   </section>
                   <section class="footer-menu">
                       <div class="footer-menu-left">
-                          <a href="#" class="footer-active">Для поставщиков</a>
-                          <a href="#" class="footer-active">О производстве</a>
+                          <a href="#" class="footer-active">Для&nbspпоставщиков</a>
+                          <a href="#" class="footer-active">О&nbspпроизводстве</a>
                       </div>
                       <div class="footer-menu-right">
-                          <a href="#" class="footer-active">Наши документы</a>
-                          <a href="#" class="footer-active">Экологические стандарты</a>
+                          <a href="#" class="footer-active">Наши&nbspдокументы</a>
+                          <a href="#" class="footer-active">Экологические&nbspстандарты</a>
                       </div>
                   </section>
                   <section class="html-academy">
@@ -214,14 +214,30 @@
               </div>
           </footer>
       </div>
-      <div class="feedback">
+      <div class="feedback clearfix">
          <span class="feedback-title">Мы обязательно вам ответим!</span>
           <form action="#" method="get">
               <input type="text" placeholder="Как вас зовут?">
               <input type="email" placeholder="Ваша почта для ответа?">
-              <textarea name="feedback-text" cols="30" rows="10" placeholder="Напишите что-нибудь..."></textarea>
-              <input type="submit" value="Отправить">
+              <textarea name="feedback-text" cols="30" rows="8" placeholder="Напишите что-нибудь..."></textarea>
+              <input type="submit" value="Отправить" class="button">
           </form>
       </div>
   </body>
+  <script>
+      var link=document.querySelector(".feedback-form-btn");
+      var popup=document.querySelector(".feedback");
+      var close=popup.querySelector(".feedback-close");
+      var login=popup.querySelector("[name-login]");
+      
+      link.addEventListener("click", function(event) {
+                            event.preventDefault();
+                            popup.classList.add("feedback-show");
+                            login.focus();
+                            })
+      close.addEventListener("click", function(event) {
+                            event.preventDefault();
+                            popup.classList.remove("feedback-show");
+                            })
+  </script>
 </html>
